qtiscoringengine/src/main/java/tinyequationscoringengine/antlr/CorrectiveOptimisticParser.java
// $ANTLR 3.5.2 CorrectiveOptimistic.g3 2015-01-02 14:12:09

package tinyequationscoringengine.antlr;

import org.antlr.runtime.*;

import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

import AIR.Common.Helpers.StopWatch;


@SuppressWarnings("all")
public class CorrectiveOptimisticParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "FLOAT", "ID", "INT", "MUL", "NEWLINE", 
		"WS", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "'Eq'", "'Ge'", 
		"'Gt'", "'Le'", "'Lt'", "'Ne'", "'_'"
	};
	public static final int EOF=-1;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int FLOAT=4;
	public static final int ID=5;
	public static final int INT=6;
	public static final int MUL=7;
	public static final int NEWLINE=8;
	public static final int WS=9;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public CorrectiveOptimisticParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public CorrectiveOptimisticParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return CorrectiveOptimisticParser.tokenNames; }
	@Override public String getGrammarFileName() { return "CorrectiveOptimistic.g3"; }


	private StopWatch _stopWatch = null;
	private int _depth = 0;
	// override it to disable recovery
	public Object RecoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow) throws RecognitionException 
	{
		throw e;
	}
	// override it to disable recovery
	protected Object RecoverFromMismatchedToken(IntStream input, int ttype, BitSet follow) throws MismatchedTokenException
	{ 
	    MismatchedTokenException mte = new MismatchedTokenException(ttype, input);
	    throw mte;
	}


	public static class relation_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "relation"
	// CorrectiveOptimistic.g3:46:1: relation : ( 'Eq' | 'Le' | 'Lt' | 'Ge' | 'Gt' | 'Ne' );
	public final CorrectiveOptimisticParser.relation_return relation() throws RecognitionException {
		CorrectiveOptimisticParser.relation_return retval = new CorrectiveOptimisticParser.relation_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken set1=null;

		CommonTree set1_tree=null;

		try {
			// CorrectiveOptimistic.g3:47:2: ( 'Eq' | 'Le' | 'Lt' | 'Ge' | 'Gt' | 'Ne' )
			// CorrectiveOptimistic.g3:
			{
			root_0 = (CommonTree)adaptor.nil();


			set1=(CommonToken)input.LT(1);
			if ( (input.LA(1) >= 17 && input.LA(1) <= 22) ) {
				input.consume();
				if ( state.backtracking==0 ) adaptor.addChild(root_0, (CommonTree)adaptor.create(set1));
				state.errorRecovery=false;
				state.failed=false;
			}
			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		catch (RecognitionException e) {
		throw e;
		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "relation"


	public static class expressionList_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "expressionList"
	// CorrectiveOptimistic.g3:55:1: expressionList : ( expr ( ',' expr )* |);
	public final CorrectiveOptimisticParser.expressionList_return expressionList() throws RecognitionException {
		CorrectiveOptimisticParser.expressionList_return retval = new CorrectiveOptimisticParser.expressionList_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken char_literal3=null;
		ParserRuleReturnScope expr2 =null;
		ParserRuleReturnScope expr4 =null;

		CommonTree char_literal3_tree=null;

		try {
			// CorrectiveOptimistic.g3:56:5: ( expr ( ',' expr )* |)
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( ((LA2_0 >= FLOAT && LA2_0 <= INT)||LA2_0==10||LA2_0==12||LA2_0==15||(LA2_0 >= 17 && LA2_0 <= 22)) ) {
				alt2=1;
			}
			else if ( (LA2_0==11) ) {
				alt2=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// CorrectiveOptimistic.g3:56:9: expr ( ',' expr )*
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_expr_in_expressionList151);
					expr2=expr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, expr2.getTree());

					// CorrectiveOptimistic.g3:56:14: ( ',' expr )*
					loop1:
					while (true) {
						int alt1=2;
						int LA1_0 = input.LA(1);
						if ( (LA1_0==14) ) {
							alt1=1;
						}

						switch (alt1) {
						case 1 :
							// CorrectiveOptimistic.g3:56:15: ',' expr
							{
							char_literal3=(CommonToken)match(input,14,FOLLOW_14_in_expressionList154); if (state.failed) return retval;
							if ( state.backtracking==0 ) {
							char_literal3_tree = (CommonTree)adaptor.create(char_literal3);
							adaptor.addChild(root_0, char_literal3_tree);
							}

							pushFollow(FOLLOW_expr_in_expressionList156);
							expr4=expr();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) adaptor.addChild(root_0, expr4.getTree());

							}
							break;

						default :
							break loop1;
						}
					}

					}
					break;
				case 2 :
					// CorrectiveOptimistic.g3:58:5: 
					{
					root_0 = (CommonTree)adaptor.nil();


					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		catch (RecognitionException e) {
		throw e;
		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expressionList"


	public static class expression_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "expression"
	// CorrectiveOptimistic.g3:61:1: public expression : expr EOF -> expr ;
	public final CorrectiveOptimisticParser.expression_return expression() throws RecognitionException {
		CorrectiveOptimisticParser.expression_return retval = new CorrectiveOptimisticParser.expression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken EOF6=null;
		ParserRuleReturnScope expr5 =null;

		CommonTree EOF6_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");

		try {
			// CorrectiveOptimistic.g3:62:5: ( expr EOF -> expr )
			// CorrectiveOptimistic.g3:62:9: expr EOF
			{
			pushFollow(FOLLOW_expr_in_expression189);
			expr5=expr();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_expr.add(expr5.getTree());
			EOF6=(CommonToken)match(input,EOF,FOLLOW_EOF_in_expression191); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_EOF.add(EOF6);

			// AST REWRITE
			// elements: expr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 62:18: -> expr
			{
				adaptor.addChild(root_0, stream_expr.nextTree());
			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		catch (RecognitionException e) {
		throw e;
		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expression"


	public static class expr_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "expr"
	// CorrectiveOptimistic.g3:65:1: expr : relationalExpression ;
	public final CorrectiveOptimisticParser.expr_return expr() throws RecognitionException {
		CorrectiveOptimisticParser.expr_return retval = new CorrectiveOptimisticParser.expr_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope relationalExpression7 =null;


		try {
			// CorrectiveOptimistic.g3:65:5: ( relationalExpression )
			// CorrectiveOptimistic.g3:65:9: relationalExpression
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_relationalExpression_in_expr209);
			relationalExpression7=relationalExpression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, relationalExpression7.getTree());

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		catch (RecognitionException e) {
		throw e;
		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expr"


	public static class relationalExpression_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "relationalExpression"
	// CorrectiveOptimistic.g3:68:1: relationalExpression : ( relation '(' additiveExpression ',' additiveExpression ')' | additiveExpression );
	public final CorrectiveOptimisticParser.relationalExpression_return relationalExpression() throws RecognitionException {
		CorrectiveOptimisticParser.relationalExpression_return retval = new CorrectiveOptimisticParser.relationalExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken char_literal9=null;
		CommonToken char_literal11=null;
		CommonToken char_literal13=null;
		ParserRuleReturnScope relation8 =null;
		ParserRuleReturnScope additiveExpression10 =null;
		ParserRuleReturnScope additiveExpression12 =null;
		ParserRuleReturnScope additiveExpression14 =null;

		CommonTree char_literal9_tree=null;
		CommonTree char_literal11_tree=null;
		CommonTree char_literal13_tree=null;

		try {
			// CorrectiveOptimistic.g3:69:5: ( relation '(' additiveExpression ',' additiveExpression ')' | additiveExpression )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( ((LA3_0 >= 17 && LA3_0 <= 22)) ) {
				alt3=1;
			}
			else if ( ((LA3_0 >= FLOAT && LA3_0 <= INT)||LA3_0==10||LA3_0==12||LA3_0==15) ) {
				alt3=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// CorrectiveOptimistic.g3:69:7: relation '(' additiveExpression ',' additiveExpression ')'
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_relation_in_relationalExpression226);
					relation8=relation();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, relation8.getTree());

					char_literal9=(CommonToken)match(input,10,FOLLOW_10_in_relationalExpression228); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					char_literal9_tree = (CommonTree)adaptor.create(char_literal9);
					adaptor.addChild(root_0, char_literal9_tree);
					}

					pushFollow(FOLLOW_additiveExpression_in_relationalExpression230);
					additiveExpression10=additiveExpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, additiveExpression10.getTree());

					char_literal11=(CommonToken)match(input,14,FOLLOW_14_in_relationalExpression232); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					char_literal11_tree = (CommonTree)adaptor.create(char_literal11);
					adaptor.addChild(root_0, char_literal11_tree);
					}

					pushFollow(FOLLOW_additiveExpression_in_relationalExpression234);
					additiveExpression12=additiveExpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, additiveExpression12.getTree());

					char_literal13=(CommonToken)match(input,11,FOLLOW_11_in_relationalExpression236); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					char_literal13_tree = (CommonTree)adaptor.create(char_literal13);
					adaptor.addChild(root_0, char_literal13_tree);
					}

					}
					break;
				case 2 :
					// CorrectiveOptimistic.g3:70:4: additiveExpression
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_additiveExpression_in_relationalExpression242);
					additiveExpression14=additiveExpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, additiveExpression14.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		catch (RecognitionException e) {
		throw e;
		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "relationalExpression"


	public static class additiveExpression_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "additiveExpression"
	// CorrectiveOptimistic.g3:73:1: additiveExpression : multiplicativeExpression ( ( '+' | '-' ) multiplicativeExpression )* ;
	public final CorrectiveOptimisticParser.additiveExpression_return additiveExpression() throws RecognitionException {
		CorrectiveOptimisticParser.additiveExpression_return retval = new CorrectiveOptimisticParser.additiveExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken set16=null;
		ParserRuleReturnScope multiplicativeExpression15 =null;
		ParserRuleReturnScope multiplicativeExpression17 =null;

		CommonTree set16_tree=null;

		try {
			// CorrectiveOptimistic.g3:74:5: ( multiplicativeExpression ( ( '+' | '-' ) multiplicativeExpression )* )
			// CorrectiveOptimistic.g3:74:9: multiplicativeExpression ( ( '+' | '-' ) multiplicativeExpression )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_multiplicativeExpression_in_additiveExpression258);
			multiplicativeExpression15=multiplicativeExpression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, multiplicativeExpression15.getTree());

			// CorrectiveOptimistic.g3:74:34: ( ( '+' | '-' ) multiplicativeExpression )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==13||LA4_0==15) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// CorrectiveOptimistic.g3:74:35: ( '+' | '-' ) multiplicativeExpression
					{
					set16=(CommonToken)input.LT(1);
					if ( input.LA(1)==13||input.LA(1)==15 ) {
						input.consume();
						if ( state.backtracking==0 ) adaptor.addChild(root_0, (CommonTree)adaptor.create(set16));
						state.errorRecovery=false;
						state.failed=false;
					}
					else {
						if (state.backtracking>0) {state.failed=true; return retval;}
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					pushFollow(FOLLOW_multiplicativeExpression_in_additiveExpression269);
					multiplicativeExpression17=multiplicativeExpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, multiplicativeExpression17.getTree());

					}
					break;

				default :
					break loop4;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		catch (RecognitionException e) {
		throw e;
		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "additiveExpression"


	public static class multiplicativeExpression_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "multiplicativeExpression"
	// CorrectiveOptimistic.g3:77:1: multiplicativeExpression : ( preceedingMultExpression superExpression ( ( '*' | '/' ) multiplicativeExpression )* | unaryExpression ( interimMultExpression multiplicativeExpression )* | unaryExpression ( ( '*' | '/' ) multiplicativeExpression )* | unaryExpression ( ( '*' | '/' ) multiplicativeExpression )* trailingMultExpression );
	public final CorrectiveOptimisticParser.multiplicativeExpression_return multiplicativeExpression() throws RecognitionException {
		CorrectiveOptimisticParser.multiplicativeExpression_return retval = new CorrectiveOptimisticParser.multiplicativeExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken set20=null;
		CommonToken set26=null;
		CommonToken set29=null;
		ParserRuleReturnScope preceedingMultExpression18 =null;
		ParserRuleReturnScope superExpression19 =null;
		ParserRuleReturnScope multiplicativeExpression21 =null;
		ParserRuleReturnScope unaryExpression22 =null;
		ParserRuleReturnScope interimMultExpression23 =null;
		ParserRuleReturnScope multiplicativeExpression24 =null;
		ParserRuleReturnScope unaryExpression25 =null;
		ParserRuleReturnScope multiplicativeExpression27 =null;
		ParserRuleReturnScope unaryExpression28 =null;
		ParserRuleReturnScope multiplicativeExpression30 =null;
		ParserRuleReturnScope trailingMultExpression31 =null;

		CommonTree set20_tree=null;
		CommonTree set26_tree=null;
		CommonTree set29_tree=null;

		try {
			// CorrectiveOptimistic.g3:78:5: ( preceedingMultExpression superExpression ( ( '*' | '/' ) multiplicativeExpression )* | unaryExpression ( interimMultExpression multiplicativeExpression )* | unaryExpression ( ( '*' | '/' ) multiplicativeExpression )* | unaryExpression ( ( '*' | '/' ) multiplicativeExpression )* trailingMultExpression )
			int alt9=4;
			switch ( input.LA(1) ) {
			case 12:
				{
				int LA9_1 = input.LA(2);
				if ( (synpred13_CorrectiveOptimistic()) ) {
					alt9=1;
				}
				else if ( (synpred15_CorrectiveOptimistic()) ) {
					alt9=2;
				}
				else if ( (synpred18_CorrectiveOptimistic()) ) {
					alt9=3;
				}
				else if ( (true) ) {
					alt9=4;
				}

				}
				break;
			case 15:
				{
				int LA9_2 = input.LA(2);
				if ( (synpred15_CorrectiveOptimistic()) ) {
					alt9=2;
				}
				else if ( (synpred18_CorrectiveOptimistic()) ) {
					alt9=3;
				}
				else if ( (true) ) {
					alt9=4;
				}

				}
				break;
			case ID:
				{
				int LA9_3 = input.LA(2);
				if ( (synpred15_CorrectiveOptimistic()) ) {
					alt9=2;
				}
				else if ( (synpred18_CorrectiveOptimistic()) ) {
					alt9=3;
				}
				else if ( (true) ) {
					alt9=4;
				}

				}
				break;
			case INT:
				{
				int LA9_4 = input.LA(2);
				if ( (synpred15_CorrectiveOptimistic()) ) {
					alt9=2;
				}
				else if ( (synpred18_CorrectiveOptimistic()) ) {
					alt9=3;
				}
				else if ( (true) ) {
					alt9=4;
				}

				}
				break;
			case FLOAT:
				{
				int LA9_5 = input.LA(2);
				if ( (synpred15_CorrectiveOptimistic()) ) {
					alt9=2;
				}
				else if ( (synpred18_CorrectiveOptimistic()) ) {
					alt9=3;
				}
				else if ( (true) ) {
					alt9=4;
				}

				}
				break;
			case 10:
				{
				int LA9_6 = input.LA(2);
				if ( (synpred15_CorrectiveOptimistic()) ) {
					alt9=2;
				}
				else if ( (synpred18_CorrectiveOptimistic()) ) {
					alt9=3;
				}
				else if ( (true) ) {
					alt9=4;
				}

				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 9, 0, input);
				throw nvae;
			}
			switch (alt9) {
				case 1 :
					// CorrectiveOptimistic.g3:78:7: preceedingMultExpression superExpression ( ( '*' | '/' ) multiplicativeExpression )*
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_preceedingMultExpression_in_multiplicativeExpression288);
					preceedingMultExpression18=preceedingMultExpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, preceedingMultExpression18.getTree());

					pushFollow(FOLLOW_superExpression_in_multiplicativeExpression290);
					superExpression19=superExpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, superExpression19.getTree());

					// CorrectiveOptimistic.g3:78:48: ( ( '*' | '/' ) multiplicativeExpression )*
					loop5:
					while (true) {
						int alt5=2;
						int LA5_0 = input.LA(1);
						if ( (LA5_0==12) ) {
							int LA5_2 = input.LA(2);
							if ( (synpred12_CorrectiveOptimistic()) ) {
								alt5=1;
							}

						}
						else if ( (LA5_0==16) ) {
							int LA5_3 = input.LA(2);
							if ( (synpred12_CorrectiveOptimistic()) ) {
								alt5=1;
							}

						}

						switch (alt5) {
						case 1 :
							// CorrectiveOptimistic.g3:78:49: ( '*' | '/' ) multiplicativeExpression
							{
							set20=(CommonToken)input.LT(1);
							if ( input.LA(1)==12||input.LA(1)==16 ) {
								input.consume();
								if ( state.backtracking==0 ) adaptor.addChild(root_0, (CommonTree)adaptor.create(set20));
								state.errorRecovery=false;
								state.failed=false;
							}
							else {
								if (state.backtracking>0) {state.failed=true; return retval;}
								MismatchedSetException mse = new MismatchedSetException(null,input);
								throw mse;
							}
							pushFollow(FOLLOW_multiplicativeExpression_in_multiplicativeExpression301);
							multiplicativeExpression21=multiplicativeExpression();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) adaptor.addChild(root_0, multiplicativeExpression21.getTree());

							}
							break;

						default :
							break loop5;
						}
					}

					}
					break;
				case 2 :
					// CorrectiveOptimistic.g3:79:4: unaryExpression ( interimMultExpression multiplicativeExpression )*
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_unaryExpression_in_multiplicativeExpression310);
					unaryExpression22=unaryExpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, unaryExpression22.getTree());

					// CorrectiveOptimistic.g3:79:20: ( interimMultExpression multiplicativeExpression )*
					loop6:
					while (true) {
						int alt6=2;
						int LA6_0 = input.LA(1);
						if ( (LA6_0==12) ) {
							int LA6_2 = input.LA(2);
							if ( (synpred14_CorrectiveOptimistic()) ) {
								alt6=1;
							}

						}
						else if ( (LA6_0==16) ) {
							int LA6_3 = input.LA(2);
							if ( (synpred14_CorrectiveOptimistic()) ) {
								alt6=1;
							}

						}

						switch (alt6) {
						case 1 :
							// CorrectiveOptimistic.g3:79:21: interimMultExpression multiplicativeExpression
							{
							pushFollow(FOLLOW_interimMultExpression_in_multiplicativeExpression313);
							interimMultExpression23=interimMultExpression();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) adaptor.addChild(root_0, interimMultExpression23.getTree());

							pushFollow(FOLLOW_multiplicativeExpression_in_multiplicativeExpression315);
							multiplicativeExpression24=multiplicativeExpression();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) adaptor.addChild(root_0, multiplicativeExpression24.getTree());

							}
							break;

						default :
							break loop6;
						}
					}

					}
					break;
				case 3 :
					// CorrectiveOptimistic.g3:80:7: unaryExpression ( ( '*' | '/' ) multiplicativeExpression )*
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_unaryExpression_in_multiplicativeExpression326);
					unaryExpression25=unaryExpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, unaryExpression25.getTree());

					// CorrectiveOptimistic.g3:80:23: ( ( '*' | '/' ) multiplicativeExpression )*
					loop7:
					while (true) {
						int alt7=2;
						int LA7_0 = input.LA(1);
						if ( (LA7_0==12) ) {
							int LA7_2 = input.LA(2);
							if ( (synpred17_CorrectiveOptimistic()) ) {
								alt7=1;
							}

						}
						else if ( (LA7_0==16) ) {
							int LA7_3 = input.LA(2);
							if ( (synpred17_CorrectiveOptimistic()) ) {
								alt7=1;
							}

						}

						switch (alt7) {
						case 1 :
							// CorrectiveOptimistic.g3:80:24: ( '*' | '/' ) multiplicativeExpression
							{
							set26=(CommonToken)input.LT(1);
							if ( input.LA(1)==12||input.LA(1)==16 ) {
								input.consume();
								if ( state.backtracking==0 ) adaptor.addChild(root_0, (CommonTree)adaptor.create(set26));
								state.errorRecovery=false;
								state.failed=false;
							}
							else {
								if (state.backtracking>0) {state.failed=true; return retval;}
								MismatchedSetException mse = new MismatchedSetException(null,input);
								throw mse;
							}
							pushFollow(FOLLOW_multiplicativeExpression_in_multiplicativeExpression337);
							multiplicativeExpression27=multiplicativeExpression();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) adaptor.addChild(root_0, multiplicativeExpression27.getTree());

							}
							break;

						default :
							break loop7;
						}
					}

					}
					break;
				case 4 :
					// CorrectiveOptimistic.g3:81:7: unaryExpression ( ( '*' | '/' ) multiplicativeExpression )* trailingMultExpression
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_unaryExpression_in_multiplicativeExpression348);
					unaryExpression28=unaryExpression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, unaryExpression28.getTree());

					// CorrectiveOptimistic.g3:81:23: ( ( '*' | '/' ) multiplicativeExpression )*
					loop8:
					while (true) {
						int alt8=2;
						int LA8_0 = input.LA(1);
						if ( (LA8_0==12) ) {
							int LA8_1 = input.LA(2);
							if ( (synpred20_CorrectiveOptimistic()) ) {
								alt8=1;
							}

						}
						else if ( (LA8_0==16) ) {
							alt8=1;
						}

						switch (alt8) {
						case 1 :
							// CorrectiveOptimistic.g3:81:24: ( '*' | '/' ) multiplicativeExpression
							{
							set29=(CommonToken)input.LT(1);
							if ( input.LA(1)==12||input.LA(1)==16 ) {
								input.consume();
								if ( state.backtracking==0 ) adaptor.addChild(root_0, (CommonTree)adaptor.create(set29));
								state.errorRecovery=false;
								state.failed=false;
							}
							else {
								if (state.backtracking>0) {state.failed=true; return retval;}
								MismatchedSetException mse = new MismatchedSetException(null,input);
								throw mse;
							}
							pushFollow(FOLLOW_multiplicativeExpression_in_multiplicativeExpression359);
							multiplicativeExpression30=multiplicativeExpression();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) adaptor.addChild(root_0, multiplicativeExpression30.getTree());

							}
							break;

						default :
							break loop8;
						}
					}

